Actualizar el código de la misión en Malmo: corregir el conteo de ejecución, ajustar la posición del bloque y mejorar la salida de estado.

--- a/minerlagente/agente segunda entrega/Tarea_2_malmo.ipynb
+++ b/minerlagente/agente segunda entrega/Tarea_2_malmo.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "aafed654",
    "metadata": {},
    "outputs": [
@@ -34,18 +34,11 @@
       "MalmoPython importado correctamente\n",
       "Iniciando misión...\n",
       "Esperando cliente...\n",
-      "..............................................................................................................................................................................................................................."
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-81a4a4df1578>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mworld_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_mission_begun\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0mworld_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent_host\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetWorldState\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0merror\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mworld_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      ".....\n",
+      "¡Misión iniciada! 🚀\n",
+      "Tipo de world_state: <class 'MalmoPython.WorldState'>\n",
+      "Atributos: ['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'errors', 'has_mission_begun', 'is_mission_running', 'mission_control_messages', 'number_of_observations_since_last_state', 'number_of_rewards_since_last_state', 'number_of_video_frames_since_last_state', 'observations', 'rewards', 'video_frames']\n",
+      "Misión terminada.\n"
      ]
     }
    ],
@@ -75,7 +68,7 @@
     "    <ServerHandlers>\n",
     "      <FlatWorldGenerator generatorString=\"3;7,2;1;\"/>\n",
     "      <DrawingDecorator>\n",
-    "        <DrawBlock x=\"-2\" y=\"3\" z=\"0\" type=\"diamond_block\"/>\n",
+    "        <DrawBlock x=\"-2\" y=\"5\" z=\"0\" type=\"diamond_block\"/>\n",
     "      </DrawingDecorator>\n",
     "      <ServerQuitWhenAnyAgentFinishes/>\n",
     "    </ServerHandlers>\n",
@@ -102,7 +95,7 @@
     "\n",
     "# 🔹 Indicar el cliente (IP de Windows)\n",
     "client_pool = Malmo.ClientPool()\n",
-    "client_pool.add(Malmo.ClientInfo(\"192.168.100.50\", 10000))  # Cambia por tu IP real\n",
+    "client_pool.add(Malmo.ClientInfo(\"127.0.0.1\", 10000))  # Cambia por tu IP real\n",
     "\n",
     "print(\"Iniciando misión...\")\n",
     "agent_host.startMission(mission, client_pool, mission_record, 0, \"CarlosBot\")\n",
@@ -123,15 +116,19 @@
     "\n",
     "for _ in range(50):\n",
     "    agent_host.sendCommand(\"move 1\")\n",
+    "    agent_host.sendCommand(\"jump 1\")\n",
     "    time.sleep(0.1)\n",
-    "\n",
+    "agent_host.sendCommand(\"move 0\")\n",
+    "agent_host.sendCommand(\"jump 0\")\n",
+    "print(\"Tipo de world_state:\", type(world_state))\n",
+    "print(\"Atributos:\", dir(world_state))\n",
     "print(\"Misión terminada.\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "malmo-py36",
+   "display_name": "3.6.15",
    "language": "python",
    "name": "python3"
   },
